the scraper BiologistsScraper works very well again :-) :-) the CitationManagerScraper is modified so that it can extract bibtex data when the URL already have the type of file e.g. bibtex that mean we must not add "&type=bibtex" when the downloadurl has bibtex :-) after that i test all the Scraper that inherit CitationManagerScraper and all of them works successfully :-)

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BiologistsScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/BiologistsScraperUnitURLTest2.bib
@@ -1,13 +1,14 @@
-@article{Baker01072012,
-  abstract = {Much of our understanding of the biological mechanisms that underlie cellular functions, such as migration, differentiation and force-sensing has been garnered from studying cells cultured on two-dimensional (2D) glass or plastic surfaces. However, more recently the cell biology field has come to appreciate the dissimilarity between these flat surfaces and the topographically complex, three-dimensional (3D) extracellular environments in which cells routinely operate in vivo. This has spurred substantial efforts towards the development of in vitro 3D biomimetic environments and has encouraged much cross-disciplinary work among biologists, material scientists and tissue engineers. As we move towards more-physiological culture systems for studying fundamental cellular processes, it is crucial to define exactly which factors are operative in 3D microenvironments. Thus, the focus of this Commentary will be on identifying and describing the fundamental features of 3D cell culture systems that influence cell structure, adhesion, mechanotransduction and signaling in response to soluble factors, which – in turn – regulate overall cellular function in ways that depart dramatically from traditional 2D culture formats. Additionally, we will describe experimental scenarios in which 3D culture is particularly relevant, highlight recent advances in materials engineering for studying cell biology, and discuss examples where studying cells in a 3D context provided insights that would not have been observed in traditional 2D systems.},
+@article{Baker3015,
+  abstract = {Much of our understanding of the biological mechanisms that underlie cellular functions, such as migration, differentiation and force-sensing has been garnered from studying cells cultured on two-dimensional (2D) glass or plastic surfaces. However, more recently the cell biology field has come to appreciate the dissimilarity between these flat surfaces and the topographically complex, three-dimensional (3D) extracellular environments in which cells routinely operate in vivo. This has spurred substantial efforts towards the development of in vitro 3D biomimetic environments and has encouraged much cross-disciplinary work among biologists, material scientists and tissue engineers. As we move towards more-physiological culture systems for studying fundamental cellular processes, it is crucial to define exactly which factors are operative in 3D microenvironments. Thus, the focus of this Commentary will be on identifying and describing the fundamental features of 3D cell culture systems that influence cell structure, adhesion, mechanotransduction and signaling in response to soluble factors, which {\textendash} in turn {\textendash} regulate overall cellular function in ways that depart dramatically from traditional 2D culture formats. Additionally, we will describe experimental scenarios in which 3D culture is particularly relevant, highlight recent advances in materials engineering for studying cell biology, and discuss examples where studying cells in a 3D context provided insights that would not have been observed in traditional 2D systems.},
   author = {Baker, Brendon M. and Chen, Christopher S.},
   doi = {10.1242/jcs.079509},
-  eprint = {http://jcs.biologists.org/content/125/13/3015.full.pdf+html},
+  issn = {0021-9533},
   journal = {Journal of Cell Science},
   number = 13,
-  pages = {3015-3024},
-  title = {Deconstructing the third dimension – how 3D culture microenvironments alter cellular cues},
-  url = {http://jcs.biologists.org/content/125/13/3015.abstract},
+  pages = {3015--3024},
+  publisher = {The Company of Biologists Ltd},
+  title = {Deconstructing the third dimension {\textendash} how 3D culture microenvironments alter cellular cues},
+  url = {http://jcs.biologists.org/content/125/13/3015.long},
   volume = 125,
   year = 2012
 }
